# iss_group_24

./: .gitignore  PLAN.md  README.md  aggregator.py  cleaner.py  export.py  inference.py  inference_combined.py  inference_localizer.py  inference_siamese.py  modeling.ipynb  next.txt  pyproject.toml  pyrightconfig.json  requirements.txt
analysis/: config.json  eval_log.jsonl  folds.json  summary.json
analysis/combined/: threshold_sweep_20260514_234357.json
analysis/localizer/: summary.json
analysis/phase0/: results.json  test_eval_off_20260509_094414.json  test_eval_off_20260509_104019.json
analysis/siamese/: folds.json  summary.json
analysis/stage1/: complete.json  epoch_001.json  epoch_002.json  epoch_003.json  epoch_004.json  epoch_005.json
analysis/stage2/: complete.json  epoch_001.json  epoch_002.json  epoch_003.json  epoch_004.json  epoch_005.json  epoch_006.json  epoch_007.json  epoch_008.json  epoch_009.json  epoch_010.json  epoch_011.json  epoch_012.json  epoch_013.json  epoch_014.json  (+6 more)
localizer/: __init__.py  dataset.py  evaluate.py  loss.py  model.py  optim.py  train.py  train_loop.py
modeling/: _analysis.py  _checkpoint.py  _folds.py  _loaders.py  _logging.py  _optim.py  _proto_cache.py  _tiling.py  _train_loop.py  dataset.py  evaluate.py  export.py  loss.py  model.py  plot.py  train.py
notebooks/: modeling.ipynb
shared/: __init__.py  analytics.py  checkpoint.py  dataset.py  folds.py  logging.py  manifest.py  plots.py  runtime.py  smoke.py
siamese/: __init__.py  dataset.py  evaluate.py  loss.py  model.py  optim.py  train.py  train_loop.py
(+398 files in other folders)
